Alpha 0.86:
Updated ExpansionMod