@@ -1,5 +1,5 @@
 {
-	"version_": 0.9,
+	"version_": 0.91,
 	"files": [
 		"mods/mods.json",
 		"config/configs.json",
